--- a/src/K9OCRS/ClientApp/src/shared/components/ProfileBadge/styles.scss
+++ b/src/K9OCRS/ClientApp/src/shared/components/ProfileBadge/styles.scss
@@ -5,6 +5,11 @@
   justify-content: center;
   align-items: center;
   border-radius: .5rem;
+  padding: .25rem .5rem;
+
+  .avatar {
+    margin-right: .25rem;
+  }
 
   &--clickable {
     cursor: pointer;
